Tamanho dos cards, mobile (correção)
falta alterar dimensoes e corrigir mobile swap

--- a/spacetennis/index.html
+++ b/spacetennis/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SpaceTennis - Explore o Universo do Tênis</title>
+    <link rel="icon" type="image/png" href="/logo-saturno.png" />
+    <meta name="description" content="A melhor loja para quem busca artigos de tênis intergalácticos!">
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-gradient-to-b from-black via-gray-900 to-gray-800 text-white font-sans m-0 p-0">
+    <!-- Certifique-se de que a div root está com a altura 100% -->
+    <div id="root" class="w-full min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
